Fix toolbar text overflow

--- a/front-end/app/styles/_toolbar.scss
+++ b/front-end/app/styles/_toolbar.scss
@@ -150,3 +150,8 @@ md-slider.md-default-theme.md-min[md-discrete] .md-thumb:after, md-slider.md-min
     font-size: 10pt;
   }
 }
+
+.md-toolbar-text {
+  font-size: 18px;
+  padding: 0 16px;
+}
